welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: value nbPAs
    avance(nbPAs);
           ^